.mainbtn fix color contrast

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h2 {/*main settings*/
 }
 
 .mainbtn {
-    background-color: hsl(322, 100%, 66%);
+    background-color: #E0008E;
     color: #fff;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
